# LoanOrigination

./: .env.example  .gitignore  COMPLIANCE_DETAIL.md  FEATURE_PLAN.md  README.md  TECH_STACK.md  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json  settings.local.json
backend/: alembic.ini  pyproject.toml  requirements.txt  seed_dev.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_aus_results_table.py  002_add_borrower_fields.py  002_add_status_changed_at.py  003_add_conditions_table.py  004_add_aus_results_table.py  005_add_closing_tables.py  006_add_underwriting_decisions.py  007_add_compliance_tables.py
backend/app/: main.py
backend/app/api/v1/: aus.py  auth.py  closing.py  compliance.py  conditions.py  documents.py  loan_estimates.py  loans.py  router.py  underwriting.py  urla.py  users.py
backend/app/core/: aus_engine.py  config.py  database.py  security.py
backend/app/models/: __init__.py  adverse_action.py  asset.py  audit_log.py  aus_result.py  base.py  borrower.py  closing.py  condition.py  declaration.py  demographics.py  document.py  employment.py  hmda_record.py  liability.py  loan.py  loan_estimate.py  military_service.py  other_income.py  reo.py  residence.py  underwriting_decision.py  user.py
backend/app/schemas/: aus_result.py  closing.py  compliance.py  condition.py  loan.py  loan_estimate.py  underwriting.py  urla.py  user.py
backend/app/services/: trid_calculator.py
backend/app/workers/: celery_app.py  tasks.py
design-system/: tokens.css
frontend/: index.html  package.json  tailwind.config.ts  (+1 more)
(+68 files in other folders)
