[project]
name = "loan-origination-backend"
version = "0.1.0"
description = "Enterprise Home Loan Origination System - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy[asyncio]==2.0.35",
    "alembic==1.13.0",
    "pydantic[email]==2.9.0",
    "pydantic-settings==2.5.0",
    "asyncpg==0.29.0",
    "celery[redis]==5.4.0",
    "redis==5.1.0",
    "httpx==0.27.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "boto3==1.35.0",
    "python-multipart==0.0.12",
    "reportlab==4.2.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
